src/objects/Assessment_Legacy__c.object
<CustomObject>
    <fields>
        <fullName>Absence_of_organized_activities__c</fullName>
        <inlineHelpText>Absence of recent participation in any organized activity?</inlineHelpText>
        <label>Absence of organized activities?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Academic_Strengths__c</fullName>
        <inlineHelpText>Q: What do you consider your strengths as a person, as a student, and as a worker?</inlineHelpText>
        <label>Academic Strengths</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <inlineHelpText>physical health needs, need for further support (i.e. health insurance), etc.</inlineHelpText>
        <label>Additional Comments</label>
        <length>5768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Contact__r.Current_Age__c</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apt_No__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Apt. No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Completed_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Completed by:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LegacyAssessments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Completed_on__c</fullName>
        <label>Assessment Completed on:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Result__c</fullName>
        <description>Set by workflow, used for display on related lists</description>
        <label>Assessment Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_time_to_reach_parents_at_home__c</fullName>
        <label>Best time to reach parents at home</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blood_Pressure__c</fullName>
        <description>Client&apos;s Blood Pressure</description>
        <label>Blood Pressure</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_No__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Building No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CEP__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>CEP #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Coordinator_Comments__c</fullName>
        <label>Case Coordinator Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Case Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LegacyAssessments3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Cell_Phone__c</fullName>
        <label>Client Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Client_Contact_Method__c</fullName>
        <label>Client Contact Method</label>
        <picklist>
            <picklistValues>
                <fullName>Career Ex Graduation Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Readiness Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internship Readiness Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Attempt/No Message Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Contact/ Info Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Contact/ Info Not Confirmed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Email__c</fullName>
        <label>Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Client Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_in_pain__c</fullName>
        <label>Client in pain?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_prescribed_pain_medications__c</fullName>
        <label>Client prescribed pain medications?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_s_True_Name__c</fullName>
        <label>Client&apos;s True Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_based_Care_Recommended__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Community-based Care Recommended</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Care</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Made__c</fullName>
        <description>Looks at the Client Contact Method field to determine whether a successful contact was made, or if the record was just a contact attempt.</description>
        <formula>if(
or(text(Client_Contact_Method__c) = &quot;Message Left&quot;,  text(Client_Contact_Method__c) = &quot;Contact Attempt/No Message Left&quot;, text(Client_Contact_Method__c) = &quot;Third Party Contact/ Info Not Confirmed&quot;),
&quot;Contact Attempt&quot;,
if( 
or(text(Client_Contact_Method__c) = &quot;Phone&quot;,  text(Client_Contact_Method__c) = &quot;In Person&quot;,  text(Client_Contact_Method__c) = &quot;Email&quot;,  text(Client_Contact_Method__c) = &quot;Third Party Contact/ Info Confirmed&quot;),
&quot;Successful Contact&quot;,
if(text(Client_Contact_Method__c) = &quot;Career Ex Grad Survey&quot;,
&quot;Graduation Survey&quot;, text(Client_Contact_Method__c)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Made</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LegacyAssessments</relationshipLabel>
        <relationshipName>LegacyAssessments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coping_with_Stress__c</fullName>
        <inlineHelpText>Question: How do you currently cope with stress/emotions, other than treatments and medications? Are there any spiritual or cultural practices that you use?</inlineHelpText>
        <label>Coping with Stress</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Court_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Court Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LegacyAssessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credits_Attained__c</fullName>
        <label>Credits Attained</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criterion_A_Met__c</fullName>
        <formula>or(not(isblank( UCLA_Single_Traumatic_Event__c )), not(ispickval( UCLA_Most_Impacted_By__c, &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criterion A Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criterion_B_Met__c</fullName>
        <formula>(if(value(text(UCLA_S3Q2_I_get_upset_when_reminded__c)) &gt;= 3, 1, 0) +  if(value(text(UCLA_S3Q3_Memories_come_to_mind__c)) &gt;= 3, 1, 0) +  if(value(text(UCLA_S3Q5_I_have_bad_dreams__c)) &gt;= 3, 1, 0) +  if(value(text(UCLA_S3Q6_I_feel_I_relive_experience__c)) &gt;= 3, 1, 0) +  if(value(text(UCLA_S3Q18_I_have_physical_reactions__c)) &gt;= 3, 1, 0)) &gt;= 1</formula>
        <label>Criterion B Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criterion_C_Met__c</fullName>
        <formula>(if(value(text( UCLA_S3Q9_I_try_not_to_talk_or_think__c )) &gt;= 3, 1, 0) + 
if(value(text( UCLA_S3Q17_I_avoid_things_that_remind_me__c )) &gt;= 3, 1, 0) + 
if(value(text( UCLA_S3Q15_Cant_remember_important_parts__c )) &gt;= 3, 1, 0) + 
if(value(text( UCLA_S3Q7_I_feel_like_staying_by_myself__c )) &gt;= 3, 1, 0) + 
if(value(text( UCLA_S3Q8_I_feel_alone__c)) &gt;= 3, 1, 0) +
if(or(value(text(  UCLA_S3Q10_I_have_trouble_feeling_happy__c )) &gt;= 3, value(text( UCLA_S3Q11_Trouble_feeling_sadness_anger__c)) &gt;= 3), 1, 0) +
if(or(value(text( UCLA_S3Q19_I_think_I_won_t_live_long__c  )) &gt;= 3, value(text( UCLA_S3Q21_I_feel_worried_about_future__c )) &gt;= 3), 1, 0)) &gt;= 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criterion C Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criterion_D_Met__c</fullName>
        <formula>(if(value(text(  UCLA_S3Q13_I_have_trouble_sleeping__c  )) &gt;= 3, 1, 0) + 
if(value(text(  UCLA_S3Q16_I_have_trouble_concentrating__c  )) &gt;= 3, 1, 0) + 
if(value(text(  UCLA_S3Q1_I_watch_out_for_danger__c  )) &gt;= 3, 1, 0) + 
if(value(text(  UCLA_S3Q12_I_feel_jumpy__c  )) &gt;= 3, 1, 0) + 
if(or(value(text(  UCLA_S3Q4_I_feel_angry__c   )) &gt;= 3, value(text( UCLA_S3Q20_I_have_arguments_or_fights__c )) &gt;= 3), 1, 0)) &gt;= 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criterion D Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cultural_Identity__c</fullName>
        <inlineHelpText>Q: What is your cultural identity, and to what extent is it important to you?</inlineHelpText>
        <label>Cultural Identity</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Current Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Employment__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Current Employment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_End_1__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External End-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_End_2__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External End-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_End_3__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External End-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Provider_1__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Provider-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Provider_2__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Provider-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Provider_3__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Provider-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Schedule_1__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Schedule-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Schedule_2__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Schedule-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_External_Schedule_3__c</fullName>
        <description>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</description>
        <inlineHelpText>Question: What are the current, external care providers you are using and will be attending during your six months at CASES?</inlineHelpText>
        <label>Current External Schedule-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Medical_Problems__c</fullName>
        <inlineHelpText>Please select all that apply.</inlineHelpText>
        <label>Current Medical Problems</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arthritis/Joint disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coronary heart disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia/Organic brain disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female reproductive system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genital/Urinary disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head injury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis/ Cirrhosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIV/AIDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypertension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurological</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Osteoporosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sexually transmitted disease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sleep disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ulcer/Gastrointestinal disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cirrhosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_School_Enrollment__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Current School Enrollment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Substance_Abuse_Problems__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Current Substance Abuse Problems</label>
        <picklist>
            <picklistValues>
                <fullName>Current SA Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA Use History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No SA Use</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_1__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_2__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_3__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Issues_1__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Issues-1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Issues_2__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Issues-2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Issues_3__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Issues-3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Provider_1__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Provider-1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Provider_2__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Provider-2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Treatments_Provider_3__c</fullName>
        <description>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</description>
        <inlineHelpText>Q: What types of treatments, therapies, medications, or other forms of care are you currently engaged in, and for what issues? Who/where are your care providers?</inlineHelpText>
        <label>Current Treatments Provider-3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_traumatic_event__c</fullName>
        <label>Description of traumatic event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diagnostic_Impressions__c</fullName>
        <label>Diagnostic Impressions</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_you_pass_any_Regent_s_exams_in_HS__c</fullName>
        <label>Did you pass any Regent’s exams in HS?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diploma_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Diploma Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diploma_Status_at_Intake__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>Diploma Status at Intake</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diploma_Type__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Diploma Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_Insurance__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Do you have Insurance?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_your_partner_endanger_your_health__c</fullName>
        <inlineHelpText>Does your intimate partner prevent you from eating or sleeping, or endanger your health in other ways?</inlineHelpText>
        <label>Does your partner endanger your health?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Drug_Test_Frequency__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Drug Test Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Biweekly</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drugs_Used_Other__c</fullName>
        <description>Copied to Contact when assessment complete: Substance Abuse
Copied from Contact when Assessment saved until completion: Psychosocial</description>
        <label>Drugs Used (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drugs_Used__c</fullName>
        <description>Copied to Contact when assessment complete: Substance Abuse
Copied from Contact when Assessment saved until completion: Psychosocial</description>
        <inlineHelpText>Check any substances ever used by participant.</inlineHelpText>
        <label>Drugs Used</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants - Mild</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education_Information_Confirmed__c</fullName>
        <label>Education Information Confirmed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education_Plan__c</fullName>
        <description>Renamed from Education Section 2</description>
        <label>Education Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Section_1__c</fullName>
        <label>Education Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Section_2__c</fullName>
        <label>Education Section 2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>